ssl on update to fix ssl problems

--- a/install/network_scripts/nginx.conf
+++ b/install/network_scripts/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 443 ssl;
     server_name domainname
 
+    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     
@@ -13,6 +14,7 @@ server {
     listen 443 ssl;
     server_name docker.domainname;
 
+    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -25,6 +27,7 @@ server {
     listen 443 ssl;
     server_name pihole.domainname;
 
+    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
