--- a/install/network_scripts/nginx.conf
+++ b/install/network_scripts/nginx.conf
@@ -1,8 +1,7 @@
 server {
     listen 443 ssl;
-    server_name domainname
+    server_name domainname;
 
-    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
     
@@ -14,7 +13,6 @@ server {
     listen 443 ssl;
     server_name docker.domainname;
 
-    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
@@ -27,7 +25,6 @@ server {
     listen 443 ssl;
     server_name pihole.domainname;
 
-    ssl on;
     ssl_certificate /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
